# hadamard-matrix

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  run_tests.sh
cmake/: FindCheck.cmake
data/: h16_1  h16_2  h16_3  h20_1  h20_2  h20_3  h24_1  h24_2  h24_3  h28_1  h28_2  h28_3  h32_1  h32_2  h32_3  h4_1  h4_2  h8_1  h8_2
equivalence/: CMakeLists.txt  Makefile  equivalence.c  equivalence.h  hadamard_equivalence.c  main.c  matrix.c  matrix.h  matrix_xor.c  naive_algorithm.c  naive_algorithm.h
report/final/: VKR_Dovzhenko1.docx  Задание на ВКР.docx  ОТЗЫВ_руководителя_Довженко.docx  Раздаточный материал.docx  Титульный лист.docx
tests/: CMakeLists.txt  test_equivalence  test_equivalence.c
tests/benchmark/: parse_report.py  test.xml
